Rebrand: Change Cocurriculum Unit to Kokupocket

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     ============================== -->
     <nav>
         <div class="nav-container">
-            <h3>Cocurriculum Unit</h3>
+            <h3>Kokupocket</h3>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#register">Register</a>
@@ -222,7 +222,7 @@
             <div class="card">
                 <h1>Cocurriculum Merit Calculator</h1>
                 <p style="margin-top: 15px;">
-                    Welcome to the Cocurriculum Unit website. We help students calculate 
+                    Welcome to Kokupocket. We help students calculate 
                     their merit points efficiently through our digital system. Register 
                     and use our calculator to track your cocurricular achievements.
                 </p>
@@ -335,7 +335,7 @@
     </section>
 
     <footer>
-        © 2026 Cocurriculum Unit | Merit Innovation System
+        © 2026 Kokupocket | Merit Innovation System
     </footer>
 
     <!-- ==============================
